omega/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ProgramFlow
Rule 1     ProgramFlow -> VariablesDeclaration SubroutinesDeclaration Main
Rule 2     Main -> main open_brace Routine close_brace
Rule 3     Number -> int_number action_insert_int_operand
Rule 4     Number -> double_number action_insert_double_operand
Rule 5     variable -> identifier dimensions
Rule 6     dimensions -> open_bracket int_number close_bracket dimensions
Rule 7     dimensions -> <empty>
Rule 8     VariablesDeclaration -> type RecVariableDeclaration semicolon VariablesDeclaration
Rule 9     VariablesDeclaration -> <empty>
Rule 10    RecVariableDeclaration -> variable
Rule 11    RecVariableDeclaration -> variable comma RecVariableDeclaration
Rule 12    RecVariableDeclaration -> variable equal ArithmeticExpression
Rule 13    RecVariableDeclaration -> variable equal ArithmeticExpression comma RecVariableDeclaration
Rule 14    type -> int
Rule 15    type -> double
Rule 16    ArithmeticExpression -> ArithmeticExpression plus action_insert_operator term action_generate_quadruplet
Rule 17    ArithmeticExpression -> ArithmeticExpression minus action_insert_operator term action_generate_quadruplet
Rule 18    ArithmeticExpression -> term
Rule 19    term -> factor
Rule 20    term -> term star action_insert_operator factor action_generate_quadruplet
Rule 21    term -> term slash action_insert_operator factor action_generate_quadruplet
Rule 22    factor -> Number
Rule 23    factor -> variable action_insert_variable_as_operand
Rule 24    factor -> UnaryOperation
Rule 25    factor -> open_parenthesis ArithmeticExpression close_parenthesis
Rule 26    BooleanExpression -> true
Rule 27    BooleanExpression -> false
Rule 28    BooleanExpression -> ArithmeticExpression
Rule 29    BooleanExpression -> ArithmeticExpression LogicOperator action_insert_operator BooleanExpression action_generate_quadruplet
Rule 30    AssignmentStatement -> variable action_insert_variable_as_operand equal ArithmeticExpression action_assignation
Rule 31    AssignmentStatement -> UnaryOperation
Rule 32    UnaryOperation -> plus_plus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
Rule 33    UnaryOperation -> minus_minus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
Rule 34    LogicOperator -> is_equal
Rule 35    LogicOperator -> not_equal
Rule 36    LogicOperator -> less_or_equal
Rule 37    LogicOperator -> greater_or_equal
Rule 38    LogicOperator -> less_than
Rule 39    LogicOperator -> greater_than
Rule 40    LogicOperator -> and
Rule 41    LogicOperator -> or
Rule 42    ifCondition -> if open_parenthesis BooleanExpression action_pushToIfStack action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace elseIfCondition
Rule 43    elseIfCondition -> action_fillPreviousGotoFalse action_pushToJumpStack action_generateUnconditionalGoto elseif open_parenthesis BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace elseIfCondition
Rule 44    elseIfCondition -> elseCondition
Rule 45    elseCondition -> action_fillPreviousGotoFalse action_pushToJumpStack action_generateUnconditionalGoto else open_brace Routine close_brace action_fillUnconditionalGotosWithEnd
Rule 46    elseCondition -> action_fillUnconditionalGotosWithEnd
Rule 47    whileLoop -> while open_parenthesis action_pushToJumpStack BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace action_fillPreviousGotoFalse action_generateGotoBooleanExpression
Rule 48    doWhileLoop -> do open_brace action_pushToJumpStack Routine close_brace while open_parenthesis BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_fillPreviousGotoFalse action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_parenthesis semicolon
Rule 49    forLoop -> for open_parenthesis initializeForLoop semicolon action_pushToJumpStack BooleanExpression semicolon action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_pushToJumpStack action_generateUnconditionalGoto action_pushToJumpStack UpdateVariables action_generateUnconditionalGoto action_fillWithTestingDirection close_parenthesis open_brace action_fillWithStartDirectionForRoutine Routine action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_brace action_fillWithEndLoop
Rule 50    UpdateVariables -> AssignmentStatement
Rule 51    UpdateVariables -> AssignmentStatement comma UpdateVariables
Rule 52    initializeForLoop -> UpdateVariables
Rule 53    initializeForLoop -> <empty>
Rule 54    SubroutinesDeclaration -> identifier open_brace Routine close_brace SubroutinesDeclaration
Rule 55    SubroutinesDeclaration -> <empty>
Rule 56    Routine -> AssignmentStatement semicolon Routine
Rule 57    Routine -> ifCondition Routine
Rule 58    Routine -> whileLoop Routine
Rule 59    Routine -> doWhileLoop Routine
Rule 60    Routine -> forLoop Routine
Rule 61    Routine -> call identifier semicolon Routine
Rule 62    Routine -> InOut Routine
Rule 63    Routine -> <empty>
Rule 64    InOut -> cin in variable RecursiveIn semicolon
Rule 65    InOut -> cout out ArithmeticExpression RecursiveOut semicolon
Rule 66    InOut -> cout out string RecursiveOut semicolon
Rule 67    RecursiveIn -> in variable RecursiveIn
Rule 68    RecursiveIn -> <empty>
Rule 69    RecursiveOut -> out ArithmeticExpression RecursiveOut
Rule 70    RecursiveOut -> out string RecursiveOut
Rule 71    RecursiveOut -> <empty>
Rule 72    action_insert_variable_as_operand -> <empty>
Rule 73    action_insert_int_operand -> <empty>
Rule 74    action_insert_double_operand -> <empty>
Rule 75    action_insert_operator -> <empty>
Rule 76    action_generate_quadruplet -> <empty>
Rule 77    action_assignation -> <empty>
Rule 78    action_generate_unary_operation_quadruplet -> <empty>
Rule 79    action_pushToJumpStack -> <empty>
Rule 80    action_generateEmptyGotoFalse_quadruplet -> <empty>
Rule 81    action_generateUnconditionalGoto -> <empty>
Rule 82    action_fillPreviousGotoFalse -> <empty>
Rule 83    action_fillWithStartDirectionForRoutine -> <empty>
Rule 84    action_fillWithTestingDirection -> <empty>
Rule 85    action_fillWithStartUpdateDirection -> <empty>
Rule 86    action_fillUnconditionalGotosWithEnd -> <empty>
Rule 87    action_fillWithEndLoop -> <empty>
Rule 88    action_pushToIfStack -> <empty>
Rule 89    action_generateGotoBooleanExpression -> <empty>

Terminals, with rules where they appear

and                  : 40
call                 : 61
cin                  : 64
close_brace          : 2 42 43 45 47 48 49 54
close_bracket        : 6
close_parenthesis    : 25 42 43 47 48 49
comma                : 11 13 51
cout                 : 65 66
do                   : 48
double               : 15
double_number        : 4
else                 : 45
elseif               : 43
equal                : 12 13 30
error                : 
false                : 27
for                  : 49
greater_or_equal     : 37
greater_than         : 39
identifier           : 5 54 61
if                   : 42
in                   : 64 67
int                  : 14
int_number           : 3 6
is_equal             : 34
less_or_equal        : 36
less_than            : 38
main                 : 2
minus                : 17
minus_minus          : 33
not_equal            : 35
open_brace           : 2 42 43 45 47 48 49 54
open_bracket         : 6
open_parenthesis     : 25 42 43 47 48 49
or                   : 41
out                  : 65 66 69 70
plus                 : 16
plus_plus            : 32
semicolon            : 8 48 49 49 56 61 64 65 66
slash                : 21
star                 : 20
string               : 66 70
true                 : 26
while                : 47 48

Nonterminals, with rules where they appear

ArithmeticExpression : 12 13 16 17 25 28 29 30 65 69
AssignmentStatement  : 50 51 56
BooleanExpression    : 29 42 43 47 48 49
InOut                : 62
LogicOperator        : 29
Main                 : 1
Number               : 22
ProgramFlow          : 0
RecVariableDeclaration : 8 11 13
RecursiveIn          : 64 67
RecursiveOut         : 65 66 69 70
Routine              : 2 42 43 45 47 48 49 54 56 57 58 59 60 61 62
SubroutinesDeclaration : 1 54
UnaryOperation       : 24 31
UpdateVariables      : 49 51 52
VariablesDeclaration : 1 8
action_assignation   : 30
action_fillPreviousGotoFalse : 43 45 47 48
action_fillUnconditionalGotosWithEnd : 45 46
action_fillWithEndLoop : 49
action_fillWithStartDirectionForRoutine : 49
action_fillWithStartUpdateDirection : 48 49
action_fillWithTestingDirection : 49
action_generateEmptyGotoFalse_quadruplet : 42 43 47 48 49
action_generateGotoBooleanExpression : 47
action_generateUnconditionalGoto : 43 45 48 49 49 49
action_generate_quadruplet : 16 17 20 21 29
action_generate_unary_operation_quadruplet : 32 33
action_insert_double_operand : 4
action_insert_int_operand : 3
action_insert_operator : 16 17 20 21 29 32 33
action_insert_variable_as_operand : 23 30 32 33
action_pushToIfStack : 42
action_pushToJumpStack : 42 43 43 45 47 47 48 48 49 49 49 49
dimensions           : 5 6
doWhileLoop          : 59
elseCondition        : 44
elseIfCondition      : 42 43
factor               : 19 20 21
forLoop              : 60
ifCondition          : 57
initializeForLoop    : 49
term                 : 16 17 18 20 21
type                 : 8
variable             : 10 11 12 13 23 30 32 33 64 67
whileLoop            : 58

Parsing method: LALR

state 0

    (0) S' -> . ProgramFlow
    (1) ProgramFlow -> . VariablesDeclaration SubroutinesDeclaration Main
    (8) VariablesDeclaration -> . type RecVariableDeclaration semicolon VariablesDeclaration
    (9) VariablesDeclaration -> .
    (14) type -> . int
    (15) type -> . double

    identifier      reduce using rule 9 (VariablesDeclaration -> .)
    main            reduce using rule 9 (VariablesDeclaration -> .)
    int             shift and go to state 4
    double          shift and go to state 5

    ProgramFlow                    shift and go to state 1
    VariablesDeclaration           shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> ProgramFlow .



state 2

    (1) ProgramFlow -> VariablesDeclaration . SubroutinesDeclaration Main
    (54) SubroutinesDeclaration -> . identifier open_brace Routine close_brace SubroutinesDeclaration
    (55) SubroutinesDeclaration -> .

    identifier      shift and go to state 7
    main            reduce using rule 55 (SubroutinesDeclaration -> .)

    SubroutinesDeclaration         shift and go to state 6

state 3

    (8) VariablesDeclaration -> type . RecVariableDeclaration semicolon VariablesDeclaration
    (10) RecVariableDeclaration -> . variable
    (11) RecVariableDeclaration -> . variable comma RecVariableDeclaration
    (12) RecVariableDeclaration -> . variable equal ArithmeticExpression
    (13) RecVariableDeclaration -> . variable equal ArithmeticExpression comma RecVariableDeclaration
    (5) variable -> . identifier dimensions

    identifier      shift and go to state 10

    RecVariableDeclaration         shift and go to state 8
    variable                       shift and go to state 9

state 4

    (14) type -> int .

    identifier      reduce using rule 14 (type -> int .)


state 5

    (15) type -> double .

    identifier      reduce using rule 15 (type -> double .)


state 6

    (1) ProgramFlow -> VariablesDeclaration SubroutinesDeclaration . Main
    (2) Main -> . main open_brace Routine close_brace

    main            shift and go to state 12

    Main                           shift and go to state 11

state 7

    (54) SubroutinesDeclaration -> identifier . open_brace Routine close_brace SubroutinesDeclaration

    open_brace      shift and go to state 13


state 8

    (8) VariablesDeclaration -> type RecVariableDeclaration . semicolon VariablesDeclaration

    semicolon       shift and go to state 14


state 9

    (10) RecVariableDeclaration -> variable .
    (11) RecVariableDeclaration -> variable . comma RecVariableDeclaration
    (12) RecVariableDeclaration -> variable . equal ArithmeticExpression
    (13) RecVariableDeclaration -> variable . equal ArithmeticExpression comma RecVariableDeclaration

    semicolon       reduce using rule 10 (RecVariableDeclaration -> variable .)
    comma           shift and go to state 15
    equal           shift and go to state 16


state 10

    (5) variable -> identifier . dimensions
    (6) dimensions -> . open_bracket int_number close_bracket dimensions
    (7) dimensions -> .

    open_bracket    shift and go to state 18
    comma           reduce using rule 7 (dimensions -> .)
    equal           reduce using rule 7 (dimensions -> .)
    semicolon       reduce using rule 7 (dimensions -> .)
    star            reduce using rule 7 (dimensions -> .)
    slash           reduce using rule 7 (dimensions -> .)
    plus            reduce using rule 7 (dimensions -> .)
    minus           reduce using rule 7 (dimensions -> .)
    close_parenthesis reduce using rule 7 (dimensions -> .)
    is_equal        reduce using rule 7 (dimensions -> .)
    not_equal       reduce using rule 7 (dimensions -> .)
    less_or_equal   reduce using rule 7 (dimensions -> .)
    greater_or_equal reduce using rule 7 (dimensions -> .)
    less_than       reduce using rule 7 (dimensions -> .)
    greater_than    reduce using rule 7 (dimensions -> .)
    and             reduce using rule 7 (dimensions -> .)
    or              reduce using rule 7 (dimensions -> .)
    in              reduce using rule 7 (dimensions -> .)
    out             reduce using rule 7 (dimensions -> .)

    dimensions                     shift and go to state 17

state 11

    (1) ProgramFlow -> VariablesDeclaration SubroutinesDeclaration Main .

    $end            reduce using rule 1 (ProgramFlow -> VariablesDeclaration SubroutinesDeclaration Main .)


state 12

    (2) Main -> main . open_brace Routine close_brace

    open_brace      shift and go to state 19


state 13

    (54) SubroutinesDeclaration -> identifier open_brace . Routine close_brace SubroutinesDeclaration
    (56) Routine -> . AssignmentStatement semicolon Routine
    (57) Routine -> . ifCondition Routine
    (58) Routine -> . whileLoop Routine
    (59) Routine -> . doWhileLoop Routine
    (60) Routine -> . forLoop Routine
    (61) Routine -> . call identifier semicolon Routine
    (62) Routine -> . InOut Routine
    (63) Routine -> .
    (30) AssignmentStatement -> . variable action_insert_variable_as_operand equal ArithmeticExpression action_assignation
    (31) AssignmentStatement -> . UnaryOperation
    (42) ifCondition -> . if open_parenthesis BooleanExpression action_pushToIfStack action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace elseIfCondition
    (47) whileLoop -> . while open_parenthesis action_pushToJumpStack BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace action_fillPreviousGotoFalse action_generateGotoBooleanExpression
    (48) doWhileLoop -> . do open_brace action_pushToJumpStack Routine close_brace while open_parenthesis BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_fillPreviousGotoFalse action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_parenthesis semicolon
    (49) forLoop -> . for open_parenthesis initializeForLoop semicolon action_pushToJumpStack BooleanExpression semicolon action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_pushToJumpStack action_generateUnconditionalGoto action_pushToJumpStack UpdateVariables action_generateUnconditionalGoto action_fillWithTestingDirection close_parenthesis open_brace action_fillWithStartDirectionForRoutine Routine action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_brace action_fillWithEndLoop
    (64) InOut -> . cin in variable RecursiveIn semicolon
    (65) InOut -> . cout out ArithmeticExpression RecursiveOut semicolon
    (66) InOut -> . cout out string RecursiveOut semicolon
    (5) variable -> . identifier dimensions
    (32) UnaryOperation -> . plus_plus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
    (33) UnaryOperation -> . minus_minus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet

    call            shift and go to state 26
    close_brace     reduce using rule 63 (Routine -> .)
    if              shift and go to state 30
    while           shift and go to state 31
    do              shift and go to state 32
    for             shift and go to state 33
    cin             shift and go to state 34
    cout            shift and go to state 35
    identifier      shift and go to state 10
    plus_plus       shift and go to state 36
    minus_minus     shift and go to state 37

    Routine                        shift and go to state 20
    AssignmentStatement            shift and go to state 21
    ifCondition                    shift and go to state 22
    whileLoop                      shift and go to state 23
    doWhileLoop                    shift and go to state 24
    forLoop                        shift and go to state 25
    InOut                          shift and go to state 27
    variable                       shift and go to state 28
    UnaryOperation                 shift and go to state 29

state 14

    (8) VariablesDeclaration -> type RecVariableDeclaration semicolon . VariablesDeclaration
    (8) VariablesDeclaration -> . type RecVariableDeclaration semicolon VariablesDeclaration
    (9) VariablesDeclaration -> .
    (14) type -> . int
    (15) type -> . double

    identifier      reduce using rule 9 (VariablesDeclaration -> .)
    main            reduce using rule 9 (VariablesDeclaration -> .)
    int             shift and go to state 4
    double          shift and go to state 5

    type                           shift and go to state 3
    VariablesDeclaration           shift and go to state 38

state 15

    (11) RecVariableDeclaration -> variable comma . RecVariableDeclaration
    (10) RecVariableDeclaration -> . variable
    (11) RecVariableDeclaration -> . variable comma RecVariableDeclaration
    (12) RecVariableDeclaration -> . variable equal ArithmeticExpression
    (13) RecVariableDeclaration -> . variable equal ArithmeticExpression comma RecVariableDeclaration
    (5) variable -> . identifier dimensions

    identifier      shift and go to state 10

    variable                       shift and go to state 9
    RecVariableDeclaration         shift and go to state 39

state 16

    (12) RecVariableDeclaration -> variable equal . ArithmeticExpression
    (13) RecVariableDeclaration -> variable equal . ArithmeticExpression comma RecVariableDeclaration
    (16) ArithmeticExpression -> . ArithmeticExpression plus action_insert_operator term action_generate_quadruplet
    (17) ArithmeticExpression -> . ArithmeticExpression minus action_insert_operator term action_generate_quadruplet
    (18) ArithmeticExpression -> . term
    (19) term -> . factor
    (20) term -> . term star action_insert_operator factor action_generate_quadruplet
    (21) term -> . term slash action_insert_operator factor action_generate_quadruplet
    (22) factor -> . Number
    (23) factor -> . variable action_insert_variable_as_operand
    (24) factor -> . UnaryOperation
    (25) factor -> . open_parenthesis ArithmeticExpression close_parenthesis
    (3) Number -> . int_number action_insert_int_operand
    (4) Number -> . double_number action_insert_double_operand
    (5) variable -> . identifier dimensions
    (32) UnaryOperation -> . plus_plus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
    (33) UnaryOperation -> . minus_minus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet

    open_parenthesis shift and go to state 46
    int_number      shift and go to state 47
    double_number   shift and go to state 48
    identifier      shift and go to state 10
    plus_plus       shift and go to state 36
    minus_minus     shift and go to state 37

    variable                       shift and go to state 40
    ArithmeticExpression           shift and go to state 41
    term                           shift and go to state 42
    factor                         shift and go to state 43
    Number                         shift and go to state 44
    UnaryOperation                 shift and go to state 45

state 17

    (5) variable -> identifier dimensions .

    comma           reduce using rule 5 (variable -> identifier dimensions .)
    equal           reduce using rule 5 (variable -> identifier dimensions .)
    semicolon       reduce using rule 5 (variable -> identifier dimensions .)
    star            reduce using rule 5 (variable -> identifier dimensions .)
    slash           reduce using rule 5 (variable -> identifier dimensions .)
    plus            reduce using rule 5 (variable -> identifier dimensions .)
    minus           reduce using rule 5 (variable -> identifier dimensions .)
    close_parenthesis reduce using rule 5 (variable -> identifier dimensions .)
    is_equal        reduce using rule 5 (variable -> identifier dimensions .)
    not_equal       reduce using rule 5 (variable -> identifier dimensions .)
    less_or_equal   reduce using rule 5 (variable -> identifier dimensions .)
    greater_or_equal reduce using rule 5 (variable -> identifier dimensions .)
    less_than       reduce using rule 5 (variable -> identifier dimensions .)
    greater_than    reduce using rule 5 (variable -> identifier dimensions .)
    and             reduce using rule 5 (variable -> identifier dimensions .)
    or              reduce using rule 5 (variable -> identifier dimensions .)
    in              reduce using rule 5 (variable -> identifier dimensions .)
    out             reduce using rule 5 (variable -> identifier dimensions .)


state 18

    (6) dimensions -> open_bracket . int_number close_bracket dimensions

    int_number      shift and go to state 49


state 19

    (2) Main -> main open_brace . Routine close_brace
    (56) Routine -> . AssignmentStatement semicolon Routine
    (57) Routine -> . ifCondition Routine
    (58) Routine -> . whileLoop Routine
    (59) Routine -> . doWhileLoop Routine
    (60) Routine -> . forLoop Routine
    (61) Routine -> . call identifier semicolon Routine
    (62) Routine -> . InOut Routine
    (63) Routine -> .
    (30) AssignmentStatement -> . variable action_insert_variable_as_operand equal ArithmeticExpression action_assignation
    (31) AssignmentStatement -> . UnaryOperation
    (42) ifCondition -> . if open_parenthesis BooleanExpression action_pushToIfStack action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace elseIfCondition
    (47) whileLoop -> . while open_parenthesis action_pushToJumpStack BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace action_fillPreviousGotoFalse action_generateGotoBooleanExpression
    (48) doWhileLoop -> . do open_brace action_pushToJumpStack Routine close_brace while open_parenthesis BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_fillPreviousGotoFalse action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_parenthesis semicolon
    (49) forLoop -> . for open_parenthesis initializeForLoop semicolon action_pushToJumpStack BooleanExpression semicolon action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_pushToJumpStack action_generateUnconditionalGoto action_pushToJumpStack UpdateVariables action_generateUnconditionalGoto action_fillWithTestingDirection close_parenthesis open_brace action_fillWithStartDirectionForRoutine Routine action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_brace action_fillWithEndLoop
    (64) InOut -> . cin in variable RecursiveIn semicolon
    (65) InOut -> . cout out ArithmeticExpression RecursiveOut semicolon
    (66) InOut -> . cout out string RecursiveOut semicolon
    (5) variable -> . identifier dimensions
    (32) UnaryOperation -> . plus_plus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
    (33) UnaryOperation -> . minus_minus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet

    call            shift and go to state 26
    close_brace     reduce using rule 63 (Routine -> .)
    if              shift and go to state 30
    while           shift and go to state 31
    do              shift and go to state 32
    for             shift and go to state 33
    cin             shift and go to state 34
    cout            shift and go to state 35
    identifier      shift and go to state 10
    plus_plus       shift and go to state 36
    minus_minus     shift and go to state 37

    Routine                        shift and go to state 50
    AssignmentStatement            shift and go to state 21
    ifCondition                    shift and go to state 22
    whileLoop                      shift and go to state 23
    doWhileLoop                    shift and go to state 24
    forLoop                        shift and go to state 25
    InOut                          shift and go to state 27
    variable                       shift and go to state 28
    UnaryOperation                 shift and go to state 29

state 20

    (54) SubroutinesDeclaration -> identifier open_brace Routine . close_brace SubroutinesDeclaration

    close_brace     shift and go to state 51


state 21

    (56) Routine -> AssignmentStatement . semicolon Routine

    semicolon       shift and go to state 52


state 22

    (57) Routine -> ifCondition . Routine
    (56) Routine -> . AssignmentStatement semicolon Routine
    (57) Routine -> . ifCondition Routine
    (58) Routine -> . whileLoop Routine
    (59) Routine -> . doWhileLoop Routine
    (60) Routine -> . forLoop Routine
    (61) Routine -> . call identifier semicolon Routine
    (62) Routine -> . InOut Routine
    (63) Routine -> .
    (30) AssignmentStatement -> . variable action_insert_variable_as_operand equal ArithmeticExpression action_assignation
    (31) AssignmentStatement -> . UnaryOperation
    (42) ifCondition -> . if open_parenthesis BooleanExpression action_pushToIfStack action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace elseIfCondition
    (47) whileLoop -> . while open_parenthesis action_pushToJumpStack BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace action_fillPreviousGotoFalse action_generateGotoBooleanExpression
    (48) doWhileLoop -> . do open_brace action_pushToJumpStack Routine close_brace while open_parenthesis BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_fillPreviousGotoFalse action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_parenthesis semicolon
    (49) forLoop -> . for open_parenthesis initializeForLoop semicolon action_pushToJumpStack BooleanExpression semicolon action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_pushToJumpStack action_generateUnconditionalGoto action_pushToJumpStack UpdateVariables action_generateUnconditionalGoto action_fillWithTestingDirection close_parenthesis open_brace action_fillWithStartDirectionForRoutine Routine action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_brace action_fillWithEndLoop
    (64) InOut -> . cin in variable RecursiveIn semicolon
    (65) InOut -> . cout out ArithmeticExpression RecursiveOut semicolon
    (66) InOut -> . cout out string RecursiveOut semicolon
    (5) variable -> . identifier dimensions
    (32) UnaryOperation -> . plus_plus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
    (33) UnaryOperation -> . minus_minus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet

    call            shift and go to state 26
    close_brace     reduce using rule 63 (Routine -> .)
    if              shift and go to state 30
    while           shift and go to state 31
    do              shift and go to state 32
    for             shift and go to state 33
    cin             shift and go to state 34
    cout            shift and go to state 35
    identifier      shift and go to state 10
    plus_plus       shift and go to state 36
    minus_minus     shift and go to state 37

    ifCondition                    shift and go to state 22
    Routine                        shift and go to state 53
    AssignmentStatement            shift and go to state 21
    whileLoop                      shift and go to state 23
    doWhileLoop                    shift and go to state 24
    forLoop                        shift and go to state 25
    InOut                          shift and go to state 27
    variable                       shift and go to state 28
    UnaryOperation                 shift and go to state 29

state 23

    (58) Routine -> whileLoop . Routine
    (56) Routine -> . AssignmentStatement semicolon Routine
    (57) Routine -> . ifCondition Routine
    (58) Routine -> . whileLoop Routine
    (59) Routine -> . doWhileLoop Routine
    (60) Routine -> . forLoop Routine
    (61) Routine -> . call identifier semicolon Routine
    (62) Routine -> . InOut Routine
    (63) Routine -> .
    (30) AssignmentStatement -> . variable action_insert_variable_as_operand equal ArithmeticExpression action_assignation
    (31) AssignmentStatement -> . UnaryOperation
    (42) ifCondition -> . if open_parenthesis BooleanExpression action_pushToIfStack action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace elseIfCondition
    (47) whileLoop -> . while open_parenthesis action_pushToJumpStack BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace action_fillPreviousGotoFalse action_generateGotoBooleanExpression
    (48) doWhileLoop -> . do open_brace action_pushToJumpStack Routine close_brace while open_parenthesis BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_fillPreviousGotoFalse action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_parenthesis semicolon
    (49) forLoop -> . for open_parenthesis initializeForLoop semicolon action_pushToJumpStack BooleanExpression semicolon action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_pushToJumpStack action_generateUnconditionalGoto action_pushToJumpStack UpdateVariables action_generateUnconditionalGoto action_fillWithTestingDirection close_parenthesis open_brace action_fillWithStartDirectionForRoutine Routine action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_brace action_fillWithEndLoop
    (64) InOut -> . cin in variable RecursiveIn semicolon
    (65) InOut -> . cout out ArithmeticExpression RecursiveOut semicolon
    (66) InOut -> . cout out string RecursiveOut semicolon
    (5) variable -> . identifier dimensions
    (32) UnaryOperation -> . plus_plus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
    (33) UnaryOperation -> . minus_minus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet

    call            shift and go to state 26
    close_brace     reduce using rule 63 (Routine -> .)
    if              shift and go to state 30
    while           shift and go to state 31
    do              shift and go to state 32
    for             shift and go to state 33
    cin             shift and go to state 34
    cout            shift and go to state 35
    identifier      shift and go to state 10
    plus_plus       shift and go to state 36
    minus_minus     shift and go to state 37

    whileLoop                      shift and go to state 23
    Routine                        shift and go to state 54
    AssignmentStatement            shift and go to state 21
    ifCondition                    shift and go to state 22
    doWhileLoop                    shift and go to state 24
    forLoop                        shift and go to state 25
    InOut                          shift and go to state 27
    variable                       shift and go to state 28
    UnaryOperation                 shift and go to state 29

state 24

    (59) Routine -> doWhileLoop . Routine
    (56) Routine -> . AssignmentStatement semicolon Routine
    (57) Routine -> . ifCondition Routine
    (58) Routine -> . whileLoop Routine
    (59) Routine -> . doWhileLoop Routine
    (60) Routine -> . forLoop Routine
    (61) Routine -> . call identifier semicolon Routine
    (62) Routine -> . InOut Routine
    (63) Routine -> .
    (30) AssignmentStatement -> . variable action_insert_variable_as_operand equal ArithmeticExpression action_assignation
    (31) AssignmentStatement -> . UnaryOperation
    (42) ifCondition -> . if open_parenthesis BooleanExpression action_pushToIfStack action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace elseIfCondition
    (47) whileLoop -> . while open_parenthesis action_pushToJumpStack BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet close_parenthesis open_brace Routine close_brace action_fillPreviousGotoFalse action_generateGotoBooleanExpression
    (48) doWhileLoop -> . do open_brace action_pushToJumpStack Routine close_brace while open_parenthesis BooleanExpression action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_fillPreviousGotoFalse action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_parenthesis semicolon
    (49) forLoop -> . for open_parenthesis initializeForLoop semicolon action_pushToJumpStack BooleanExpression semicolon action_pushToJumpStack action_generateEmptyGotoFalse_quadruplet action_pushToJumpStack action_generateUnconditionalGoto action_pushToJumpStack UpdateVariables action_generateUnconditionalGoto action_fillWithTestingDirection close_parenthesis open_brace action_fillWithStartDirectionForRoutine Routine action_generateUnconditionalGoto action_fillWithStartUpdateDirection close_brace action_fillWithEndLoop
    (64) InOut -> . cin in variable RecursiveIn semicolon
    (65) InOut -> . cout out ArithmeticExpression RecursiveOut semicolon
    (66) InOut -> . cout out string RecursiveOut semicolon
    (5) variable -> . identifier dimensions
    (32) UnaryOperation -> . plus_plus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet
    (33) UnaryOperation -> . minus_minus action_insert_operator variable action_insert_variable_as_operand action_generate_unary_operation_quadruplet

    call            shift and go to state 26
    close_brace     reduce using rule 63 (Routine -> .)
    if              shift and go to state 30
    while           shift and go to state 31
    do              shift and go to state 32
    for             shift and go to state 33
    cin             shift and go to state 34
    cout            shift and go to state 35
    identifier      shift and go to state 10
    plus_plus       shift and go to state 36
    minus_minus     shift and go to state 37

    doWhileLoop                    shift and go to state 24
    Routine                        shift and go to state 55
    AssignmentStatement            shift and go to state 21
    ifCondition                    shift and go to state 22
    whileLoop                      shift and go to state 23
    forLoop                        shift and go to state 25
    InOut                          shift and go to state 27
    variable                       shift and go to state 28
    UnaryOperation                 shift and go to state 29

state 25
